# av-m-02.1

./: README.md  main.py  pyproject.toml  requirements.txt
scraper/data/: computers_data.csv  computers_data.json
scraper/source/: main.py
